added bootstrap added new ico added spyItem and spyProfileRow classes more tests

--- a/nm-filterable-list/public/index.html
+++ b/nm-filterable-list/public/index.html
@@ -6,7 +6,12 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Filter is as filter does</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap/css/bootstrap-grid.min.css">
+
+    <title>Super Secret Spy Database</title>
   </head>
   <body>
     <noscript>
@@ -15,3 +20,5 @@
     <div id="root"></div>
   </body>
 </html>
+
+<script type="text/javascript" src="%PUBLIC_URL%/styles/bootstrap/js/bootstrap.min.js"></script>
