--- a/nm-filterable-list/public/index.html
+++ b/nm-filterable-list/public/index.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 
     <title>Super Secret Spy Database</title>
   </head>
@@ -21,4 +20,6 @@
   </body>
 </html>
 
-<script type="text/javascript" src="%PUBLIC_URL%/styles/bootstrap/js/bootstrap.min.js"></script>
+<!-- Bootstrap -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.js"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
